--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,7 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^.*\.pdf
+^inst/exercises/.*\\.(html|pdf)$
+^inst/readers/.*\\.(html|pdf)$
+^inst/rmarkdown/.*\\.(html|pdf)$
+^inst/tutorials/.*\\.(html|pdf)$
