--- a/inst/rmarkdown/templates/rtm0D/template.yaml
+++ b/inst/rmarkdown/templates/rtm0D/template.yaml
@@ -1,2 +1,2 @@
 name: RTM_0D, template for simple dynamic model
-description: Template for dynamic models in 0D
+description: Template for dynamic model in 0D
