--- a/inst/rmarkdown/templates/porous1D_extensive/template.yaml
+++ b/inst/rmarkdown/templates/porous1D_extensive/template.yaml
@@ -1,2 +1,2 @@
 name: RTM_porous1D, template for a 1D model in porous media + text
-description: Template to be used for a multiphase (porous) dynamic model in 1D (with text)
+description: Template for dynamic reaction-transport model in 1D in porous media (with text)
