--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -10,4 +10,5 @@ README.md
 ^inst/readers/.*\\.(html|pdf)$
 ^inst/rmarkdown/.*\\.(html|pdf)$
 ^inst/tutorials/.*\\.(html|pdf)$
-^tutorialSlides$
+^inst/paper$
+^tutorial_slides$
