rtm0D template updated

--- a/inst/rmarkdown/templates/rtm0D/template.yaml
+++ b/inst/rmarkdown/templates/rtm0D/template.yaml
@@ -1,2 +1,2 @@
-name: RTM_0D, template for simple dynamic model
-description: Template for dynamic model in 0D
+name: RTM_0D, template for a simple dynamic model
+description: Template for a dynamic model in 0D
