templates checked by LP

--- a/inst/rmarkdown/templates/npzd/template.yaml
+++ b/inst/rmarkdown/templates/npzd/template.yaml
@@ -1,2 +1,2 @@
-name: RTM_npzd, template markdown file for the NPZD model
+name: RTM_npzd, template for the NPZD model
 description: Template to be used for the NPZD exercise
