--- a/inst/rmarkdown/templates/rtmEquilibrium/template.yaml
+++ b/inst/rmarkdown/templates/rtmEquilibrium/template.yaml
@@ -1,2 +1,2 @@
-name: RTM_equilibrium, template for equilibrium chemistry model
-description: Template for equilibrium chemical model
+name: RTM_equilibrium, template for equilibrium chemistry models
+description: Template for local equilibrium chemical models
