--- a/inst/rmarkdown/templates/rmarkdown_small/template.yaml
+++ b/inst/rmarkdown/templates/rmarkdown_small/template.yaml
@@ -1,2 +1,2 @@
-name: rmarkdown_small, template file for the introduction to R exercise
+name: rmarkdown_small, template for the introduction to R exercise
 description: Template to be used for the exercise "introductionR"
