--- a/inst/rmarkdown/templates/rtm1D/template.yaml
+++ b/inst/rmarkdown/templates/rtm1D/template.yaml
@@ -1,2 +1,2 @@
-name: RTM_1D, template for 1D dynamic model
-description: Template for dynamic reaction-transport model in 1D
+name: RTM_1D, template for a 1D dynamic model
+description: Template for a dynamic reaction-transport model in 1D
