the annoying errors / warnings in the functions; changes to make the package build without warnings/notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 import(learnr)
 import(ReacTran, deSolve, rootSolve, plot3D)
-importFrom("utils", "browseURL")
+importFrom("utils", "browseURL", "file.edit")
 
 export(RTMtutorial)
 export(RTMexercise)
