description: LP removed (source of error?)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.3.0
 Author: Karline Soetaert <karline.soetaert@nioz.nl>,
         Lubos Polerecky <l.polerecky@uu.nl>,
         Dries Bonte <dries.bonte@ugent.be>
-Maintainer: Karline Soetaert <karline.soetaert@nioz.nl>,
-            Lubos Polerecky <l.polerecky@uu.nl>
+Maintainer: Karline Soetaert <karline.soetaert@nioz.nl>
 Depends: R (>= 3.5.0), learnr, ReacTran, deSolve, rootSolve, plot3D
 Suggests: knitr, rmarkdown, FME, marelac
 Description: Tutorials, exercises, readers, answers, and templates for use in 
